feat: 新增 LLM 客戶端、Schema.org 向量儲存及語義映射功能，並更新相關依賴與示範腳本。

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ pydantic
 pydantic-settings
 gitpython
 requests
+chromadb
+langchain
+langchain-community
+tiktoken
+sentence-transformers
+langchain-openai
+langchain-google-genai
